<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <!--  Place tag label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/type_search"
            android:textColor="@color/foreGreen" />

        <!-- Place tag field -->
        <EditText
            android:id="@+id/type_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@android:drawable/editbox_background" />

        <!--  Person tag label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/value_search"
            android:textColor="@color/foreGreen" />

        <!-- Person tag field -->
        <EditText
            android:id="@+id/value_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@android:drawable/editbox_background" />

        <!--  Buttons for save and cancel -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/perform_search"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/foreGreen"
                android:onClick="performSearch"
                android:text="Search"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/search_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/foreGreen"
                android:onClick="cancelSearch"
                android:text="@string/cancel_label"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
